Completed the app Changed links in the navbar Added new step on no pets! logo **Need to fix code.html not showing properly**

--- a/css/site.css
+++ b/css/site.css
@@ -68,8 +68,8 @@ nav{
 }
 
 .appLogo{
-
     max-width: 400px;
+    background-color: yellowgreen;
 }
 
 .mainTitle{
@@ -95,5 +95,10 @@ footer i{
 
 footer i:hover{
     color: var(--cf-theme-200);
+}
+
+#paliAlert{
+    transition: opacity 1s ease-in-out;
+    opacity: 0;
 }
 
